[gd_scene load_steps=4 format=3 uid="uid://khsoawiix6md"]

[ext_resource type="Script" path="res://utilities/ramp_generator/RampGenerator.gd" id="1_f76dk"]

[sub_resource type="Curve3D" id="Curve3D_ingqh"]
bake_interval = 1.0
_data = {
"points": PackedVector3Array(-1.81988, -0.617236, -0.00131345, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4.73799, 0.743687, -0.0399609),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_8gu87"]
_surfaces = [{
"aabb": AABB(-0.00843383, -0.155053, -0.98787, 0.748745, 0.310116, 1.97575),
"format": 34359738375,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 3,
"vertex_data": PackedByteArray(16, 46, 10, 60, 59, 198, 30, 62, 15, 229, 124, 63, 16, 46, 10, 188, 59, 198, 30, 190, 15, 229, 124, 191, 11, 133, 61, 63, 218, 250, 237, 61, 128, 153, 204, 187, 107, 97, 147, 240, 139, 64, 255, 191, 107, 97, 147, 240, 139, 64, 255, 191, 107, 97, 147, 240, 139, 64, 255, 191)
}]

[node name="RampGenerator" type="Node3D"]
script = ExtResource("1_f76dk")

[node name="RampSurfacePath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0278493, -0.0671864, 0.111494)
curve = SubResource("Curve3D_ingqh")

[node name="RampSurfaceMesh" type="MeshInstance3D" parent="RampSurfacePath"]
mesh = SubResource("ArrayMesh_8gu87")

[connection signal="curve_changed" from="RampSurfacePath" to="." method="_on_ramp_surface_path_curve_changed"]
